employee-service/employee.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-backend
  labels:
    app: employee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
      - name: employee
        image: adimasfachri/simple-microservices:employee
        ports:
        - name: http
          containerPort: 8004
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  selector:
    app: employee
  ports:
    - name: http
      protocol: TCP
      port: 8004
      targetPort: http
