employee-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test-employee.metanesia.id
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: employee-service
            port:
              number: 8004
